# hongloumeng-kb

./: .gitignore  README.md  pyproject.toml
data/: aliases.json  chapters.json  entities.json  events.json  graph.json  notes.json  relations.json
docs/: index.html
docs/chapters/: 001.html  002.html  003.html  004.html  005.html
docs/css/: styles.css
docs/entities/: concept.html  household.html  index.html  object.html  person.html  place.html  role.html  text.html  time.html
docs/graph/: graph.js  graph.json  index.html
docs/plans/: 2026-06-30-hongloumeng-kb.html  2026-06-30-hongloumeng-kb.md
docs/spec/: annotation.md  events-relations.md
scripts/: annotate_pilot.py  build_entity_index.py  build_graph.py  fetch_wikisource.py  kb.py  render_site.py  validate_graph_data.py
site/: graph.js  styles.css
tests/: test_annotation_integrity.py  test_entity_index.py  test_graph_export.py  test_graph_schema.py  test_render_site.py  test_source_import.py
texts/raw/: 001_甄士隐梦幻识通灵贾雨村风尘怀闺秀.md  002_贾夫人仙逝扬州城冷子兴演说荣国府.md  003_贾雨村夤缘复旧职林黛玉抛父进京都.md  004_薄命女偏逢薄命郎葫芦僧乱判葫芦案.md  005_游幻境指迷十二钗饮仙醪曲演红楼梦.md
texts/tagged/: 001_甄士隐梦幻识通灵贾雨村风尘怀闺秀.tagged.md  002_贾夫人仙逝扬州城冷子兴演说荣国府.tagged.md  003_贾雨村夤缘复旧职林黛玉抛父进京都.tagged.md  004_薄命女偏逢薄命郎葫芦僧乱判葫芦案.tagged.md  005_游幻境指迷十二钗饮仙醪曲演红楼梦.tagged.md
